Fix information leakage between contexts (#61)
* Isolate execution contexts

Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>

* Enable lomok by modifying compiling args

Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>

* Add a yaml test for context leakage

Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>

* Increase max-turns of github claude pr action to 150

Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>

---------

Signed-off-by: Yuanchun Shen <yuanchu@amazon.com>